# rust-project

./: Cargo.toml  flake.nix  monitor_process.sh  shell.nix
.vim/: coc-settings.json
bar/: Cargo.toml
bar/src/: main.rs
clash-egui/: Cargo.toml
clash-egui/src/: app.rs  main.rs
clash-egui/src/clash/: api.rs  config.rs  core.rs  mod.rs
clash-egui/src/ui/: dashboard.rs  mod.rs  proxies.rs
clash-egui/src/utils/: config_parser.rs  mod.rs  system_proxy.rs
clash_client/: Cargo.toml
clash_client/src/: main.rs
clock/: Cargo.toml
clock/src/: main.rs
dioxus_bar/: Cargo.toml
dioxus_bar/assets/: style.css
dioxus_bar/src/: error.rs  main.rs  system_monitor.rs
dx_bar/: Cargo.toml
dx_bar/assets/: style.css
dx_bar/src/: main.rs  system_monitor.rs
eframe_toy/: Cargo.toml  index.html
eframe_toy/assets/: sw.js
eframe_toy/src/: app.rs  correlation_stitcher.rs  deprecated.rs  direct_stitcher.rs  editor_installer.rs  filer.rs  image_concatenator.rs  image_viewer.rs  lib.rs  main.rs  screen_selection.rs  ssh_commander.rs
egui_bar/: Cargo.toml
egui_bar/src/: app_state.rs  audio_manager.rs  constants.rs  egui_bar.rs  egui_bar_app.rs  lib.rs  main.rs  metrics.rs  system_monitor.rs
egui_bar/src/app/: events.rs  mod.rs  state.rs
egui_bar/src/audio/: mod.rs
egui_bar/src/config/: mod.rs
egui_bar/src/system/: mod.rs  monitor.rs
egui_bar/src/ui/: controller_info.rs  debug_display.rs  mod.rs  system_info.rs  theme.rs  volume_control.rs  workspace_info.rs
egui_bar/src/ui/components/: controller_info.rs  debug_display.rs  mod.rs  system_info.rs  volume_control.rs  workspace_info.rs
egui_bar/src/utils/: error.rs  metrics.rs  mod.rs
egui_bar/tests/: integration_tests.rs
filer/: Cargo.toml
filer/src/: main.rs
gtk_bar/: Cargo.toml
gtk_bar/src/: audio_manager.rs  error.rs  main.rs  styles.css  system_monitor.rs
gtk_bar/src/resources/: gtk4_status_bar.cmb  main_layout.ui
iced_bar/: Cargo.toml
iced_bar/src/: audio_manager.rs  cpu_pie.rs  error.rs  main.rs  system_monitor.rs
jterm/: Cargo.toml
jterm/src/: main.rs
jterm2/: Cargo.toml
jterm2/src/: config.rs  main.rs
jterm3/: Cargo.toml
jterm3/src/: main.rs
jterm4/: Cargo.toml  shell.nix
jterm4/src/: main.rs
jwm/: Cargo.toml  build.rs  collect_files.py  install_jwm_scripts.sh  jwm.desktop  jwm_control.sh  jwm_daemon.sh  jwm_debug.sh  picom.conf  shell.nix  status.sh  test.bash  wrapper.h
jwm/benches/: wm_benchmark.rs
jwm/scripts/: bar.sh  install_jwm_scripts_deprecated.sh  jwm_daemon.sh  jwm_debug.sh  run.sh
jwm/src/: bar.rs  build.rs  config.rs  config.toml  deprecated.rs  drw.rs  dwm.rs  icon_gallery.rs  jwm.rs  lib.rs  main.rs  miscellaneous.rs  pangoxft.rs  pangoxft_sys.rs  terminal_prober.rs  tests.rs  theme_manager.rs  xcb_conn.rs  xcb_util.rs  xproto.rs
jwm/src/backend/: api.rs  common_define.rs  common_input.rs  cursor_manager.rs  mod.rs  traits.rs
jwm/src/backend/wayland/: backend.rs  color.rs  compositor.rs  cursor.rs  event_source.rs  input_ops.rs  key_ops.rs  mod.rs  output_ops.rs  property_ops.rs  window_ops.rs
jwm/src/backend/x11/: adapter.rs  backend.rs  color.rs  cursor.rs  event_source.rs  ewmh.rs  ewmh_facade.rs  input_ops.rs  key_ops.rs  mod.rs  output_ops.rs  property_ops.rs  window_ops.rs
jwm/tests/: integration_test.rs  slot_map_test.rs  test_jwm.sh
jwm/tools/: README.md  README.org  jwm_tool.rs
pangoxft_bindings/: Cargo.toml  build.rs
pangoxft_bindings/src/: lib.rs
point-process/: Cargo.toml
point-process/src/: lib.rs
point-process/src/spatial/: domains.rs  mod.rs  processes.rs
relm_bar/: Cargo.toml
relm_bar/src/: audio_manager.rs  main.rs  shared_memory.rs  styles.css  system_monitor.rs
relm_bar/src/resources/: main_layout.ui  relm_status_bar.cmb
shared_structures/: Cargo.toml  san.sh
shared_structures/benches/: benchmark.sh  ring_buffer_bench.rs  run_benches.sh  stress_test.rs
shared_structures/src/: lib.rs  profiling.rs  shared_message.rs  shared_ring_buffer.rs
shared_structures/src/backends/: common.rs  eventfd.rs  futex.rs  mod.rs  semaphore.rs
sys/: Cargo.toml
sys/src/: main.rs
tao_pixels_bar/: Cargo.toml
tao_pixels_bar/src/: main.rs
tao_softbuffer_bar/: Cargo.toml
tao_softbuffer_bar/src/: main.rs
tao_wgpu_bar/: Cargo.toml
tao_wgpu_bar/src/: main.rs
tauri_bar/: README.md  package.json  pnpm-lock.yaml
tauri_bar/.cargo/: config.toml.back
tauri_bar/src/: App.css  App.tsx
tauri_bar/src-tauri/: Cargo.toml  tauri.conf.json
tauri_bar/src-tauri/capabilities/: default.json
tauri_bar/src-tauri/src/: main.rs  system_monitor.rs
tauri_react_bar/: cc.sh  flatpak-builder.yaml  package.json
tauri_react_bar/src-tauri/: Cargo.toml  tauri.conf.json
tauri_react_bar/src-tauri/src/: main.rs
tauri_vue_bar/: package.json  pnpm-lock.yaml
tauri_vue_bar/src/: App.vue
tauri_vue_bar/src-tauri/: Cargo.toml  tauri.conf.json
tgit/: Cargo.toml
tgit/src/: action_git.rs  event_git.rs  main.rs  render_git.rs  tui_git.rs
toy/: Cargo.toml
toy/src/: main.rs
winit_bar/: Cargo.toml
winit_bar/src/: main.rs
winit_pixels_bar/: Cargo.toml
winit_pixels_bar/src/: main.rs
winit_softbuffer_bar/: Cargo.toml
winit_softbuffer_bar/src/: main.rs
winit_wgpu_bar/: Cargo.toml
winit_wgpu_bar/src/: main.rs
x11rb_bar/: Cargo.toml
x11rb_bar/src/: main.rs
xbar_core/: Cargo.toml
xbar_core/src/: audio_manager.rs  lib.rs  system_monitor.rs
xcb_bar/: Cargo.toml
xcb_bar/src/: main.rs
