# rust-project/Cargo.toml

[workspace]
# 列出所有属于该工作区的成员 crate
members = [
    "egui_bar",
    "iced_bar",
    "gtk_bar",
    "relm_bar",
    "dioxus_bar",
    "tauri_bar/src-tauri",
    "jwm",
    "shared_structures",
    "x11rb_bar",
    "xcb_bar", "xbar_core",
]
resolver = "2" # 推荐使用最新的依赖解析器

# [IMPORTANT] 在这里集中定义所有共享的依赖项！
[workspace.dependencies]
shared_structures = { path = "shared_structures", features = ["use-futex"] }
# shared_structures = { path = "shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "shared_structures", features = ["use-semaphore"] }
xbar_core = { path = "xbar_core" }

anyhow = "1.0.99"
chrono = "0.4.42"
sysinfo = { version = "0.37.0", features = ["multithread"] }
alsa = "0.10.0"
log = "0.4.28"
flexi_logger = "0.31.2"
battery = "0.7.8"
thiserror = "2.0.16"
toml = "0.9.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.46.1", features = ["full"] }
libc = "0.2.175"

[profile.release]
opt-level = 3       # 优化级别 (0-3, s, z)
lto = "fat"         # 链接时优化
codegen-units = 1   # 减少并行编译单元以获得更好的优化
strip = true        # 剥离二进制文件中的调试符号
panic = "abort"     # 发布模式下遇到panic直接中止

[profile.dev]
opt-level = 0       # 开发模式不优化，加快编译速度
debug = true        # 包含调试信息
