[package]
name = "bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pango = "0.20.4"
pangocairo = "0.20.4"
x11 = "2.21.0"
cairo-rs ={ version = "0.20.5", features = ["png", "xlib"] }
cairo-sys-rs = { version = "0.20.0", features = ["png", "xlib", "x11"] }
