[package]
name = "bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.39"
console = "0.15.11"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.9"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
