[package]
name = "clash-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_plot = "0.32.1"
env_logger = "0.11.8"
features = "0.10.0"
font-kit = "0.14.2"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
open = "5.3.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
