[package]
name = "clash_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dirs = "6.0.0"
eframe = { version = "0.31.1", features = ["persistence"] }
egui = "0.31.1"
font-kit = "0.14.2"
futures-util = "0.3.31"
humansize = "2.1.3"
humantime = "2.2.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
urlencoding = "2.1.3"
