[package]
name = "dioxus_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }

wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

tokio = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
xbar_core = { workspace = true }
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
serde = { workspace = true }
libc = { workspace = true }

dioxus-desktop = "0.6.3"
