[package]
name = "toy"
version = "0.1.0"
authors = ["beamiter <beamiter@163.com>"]
edition = "2021"

[dependencies]

log = "0.4"
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["persistence"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
ssh2 = "0.9.4"
regex = "1.11.1"
image = "0.25.5"
ndarray = "0.16.1"
flexi_logger = "0.29.8"
rfd = "0.15.3"
walkdir = "2.5.0"

[profile.release]
opt-level = 2 # fast and small wasm
