[package]
name = "toy"
version = "0.1.0"
authors = ["beamiter <beamiter@163.com>"]
edition = "2021"

[dependencies]

log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
regex = "1.11.1"
image = "0.25.5"
ndarray = "0.16.1"
flexi_logger = "0.29.8"
rfd = "0.15.3"
walkdir = "2.5.0"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"] }
ssh2 = "0.9.5"
once_cell = "1.21.3"
eframe = { version = "0.32.2", features = ["persistence"] }
egui = "0.32.2"

[profile.release]
opt-level = 2 # fast and small wasm
