[package]
name = "egui_bar"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern system status bar built with egui"

[dependencies]

# 系统信息
sysinfo = "0.30"
alsa = "0.7"

# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 日志
log = "0.4"
flexi_logger = "0.27"
anyhow = "1.0"

# 实用工具
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
font-kit = "0.11"

# 共享内存（原项目依赖）
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
thiserror = "2.0.12"
tempfile = "3.20.0"
battery = "0.7.8"
image = "0.25.6"
once = "0.3.4"
tokio = { version = "1.47.1", features = ["full"] }
eframe = { version = "0.32.2", features = ["persistence"] }
egui_plot = "0.33.0"
egui = "0.32.2"

[features]
default = []

debug_mode = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = 1
opt-level = 1
