[package]
name = "egui_bar"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern system status bar built with egui"

[dependencies]
# 序列化
serde = { workspace = true }

# 日志
log = { workspace = true }
anyhow = { workspace = true }

# 实用工具
chrono = { workspace = true }

# 共享内存（原项目依赖）
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
xbar_core = { workspace = true }
tokio = { workspace = true }

font-kit = "0.14"
eframe = { version = "0.32.3", features = ["persistence"] }
egui_plot = "0.33.0"
egui = "0.32.3"

[features]
default = []

debug_mode = []
