[package]
name = "gtk_bar"
version = "0.1.0"
edition = "2024"

[features]
x11 = []

[dependencies]
log = { workspace = true }
shared_structures = { workspace = true }
xbar_core = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
chrono = { workspace = true }

async-channel = "2.5.0"
gtk4 = "0.10.1"
gdk4 = "0.10.1"
