[package]
name = "iced_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
flexi_logger = "0.31.0"
log = "0.4.27"
thiserror = "2.0.12"
toml = "0.8.23"
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
time = "0.3.41"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["advanced", "debug", "lazy", "smol"] }
sysinfo = "0.35.2"
battery = "0.7.8"
alsa = "0.9.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
