[package]
name = "iced_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }

iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["advanced", "debug", "lazy", "smol"] }

# --- 外部依赖 (External Crates) ---
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# --- 工作区内部依赖 (Internal Workspace Crates) ---
shared_structures = { workspace = true }
xbar_core = { workspace = true }
anyhow.workspace = true
