[package]
name = "jterm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.18.0"
glib = "0.19.3"
glib-sys = "0.19.0"
gtk = "0.18.1"
once_cell = "1.19.0"
pango-sys = "0.19.5"
vte-sys = "0.2.2"
