[package]
name = "jterm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-sys = "0.9.1"
gtk-sys = "0.9.2"
glib-sys = "0.9.1"
gio-sys = "0.9.1"
gobject-sys = "0.9.1"
once_cell = "1.19.0"
pango-sys = "0.9.1"
vte-sys = { version = "0.2.2", features = ["v0_52"] }
pcre2-sys = "0.2.9"
nix = "0.29.0"
gdk-pixbuf-sys = "0.9.1"
cairo-sys-rs = "0.9.2"
