[package]
name = "jwm"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[features]
default = []
egui_bar = []
iced_bar = []
dioxus_bar = []
tauri_bar = []
gtk_bar = []
relm_bar = []
x11rb_bar = []
xcb_bar = []
winit_bar = []
nixgl = []
cairo = []

[[bin]]
name = "jwm-tool"
path = "tools/jwm_tool.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
dirs = "6.0.0"
dirs-next = "2.0.0"
fastrand = "2.3.0"
glob = "0.3.3"
signal-hook = "0.3.18"
slotmap = { version = "1.0.7", features = ["serde"] }
x11 = { version = "2.21.0", features = ["all"] }
x11rb = { version = "0.13.2", features = ["all-extensions"] }
x11rb-protocol = "0.13.2"

libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
chrono = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
xbar_core = { workspace = true }
nix.workspace = true
cfg-if.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
rand.workspace = true


[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"

[[bench]]
name = "wm_benchmark"
harness = false
