[package]
name = "jwm"
version = "0.1.0"
edition = "2021"

[features]
egui_bar = []
iced_bar = []
dioxus_bar = []
tauri_react_bar = []
tauri_vue_bar = []
gtk_bar = []
relm_bar = []
x11rb_bar = []
xcb_bar = []
winit_softbuffer_bar = []
tao_softbuffer_bar = []
winit_pixels_bar = []
tao_pixels_bar = []
winit_wgpu_bar = []
tao_wgpu_bar = []
nixgl = []
cairo = []
backend-x11 = []
backend-wayland = []
default = ["backend-wayland", "xcb_bar"]

[[bin]]
name = "jwm-tool"
path = "tools/jwm_tool.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
dirs-next = "2.0.0"
fastrand = "2.3.0"
glob = "0.3.3"
signal-hook = "0.3.18"
slotmap = { version = "1.0.7", features = ["serde"] }
x11 = { version = "2.21.0", features = ["all"] }
x11rb = { version = "0.13.2", features = ["all-extensions"] }
x11rb-protocol = "0.13.2"

libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
chrono = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
xbar_core = { workspace = true }
nix.workspace = true
cfg-if.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
rand.workspace = true
xkbcommon = "0.9.0"
bitflags = "2.9.4"
smithay = { version = "0.7.0", features = ["backend_winit", "renderer_gl", "wayland_frontend"] }
calloop = "0.14.3"
wayland-server = "0.31.10"
wayland-protocols = { version = "0.32.9", features = ["staging", "unstable"] }
winit = "0.30.12"
crossbeam-channel = "0.5.15"


[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"

[[bench]]
name = "wm_benchmark"
harness = false
