[package]
name = "relm_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
flexi_logger = { version = "0.31.2", features = ["colors"] }
log = "0.4.27"
sysinfo = "0.35.2"
thiserror = "2.0.12"
toml = "0.8.23"
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
chrono = "0.4.41"
once_cell = "1.21.3"
alsa = "0.9.1"
tracker = "0.2.2"
rand = "0.9.2"
relm4 = "0.10.0"
relm4-macros = "0.10.0"
relm4-components = "0.10.0"
gtk4 = "0.10.0"
gdk4-x11 = { version = "0.10.0", features = ["xlib"] }
