[package]
name = "relm_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
xbar_core = { workspace = true }
shared_structures = { workspace = true }
# shared_structures = { path = "../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }

once_cell = "1.21.3"
tracker = "0.2.2"
rand = "0.9.2"
relm4 = "0.10.0"
relm4-macros = "0.10.0"
relm4-components = "0.10.0"
gtk4 = "0.10.0"
gdk4-x11 = { version = "0.10.0", features = ["xlib"] }
