[package]
name = "shared_structures"
version = "0.1.0"
edition = "2021"

[features]
# default = ["use-eventfd"]
use-eventfd = []
use-semaphore = []
use-futex = []

[dependencies]
cfg-if = "1.0.1"
criterion = "0.7.0"
libc = "0.2.175"
log = "0.4.26"
nix = { version = "0.30.1", features = ["event", "fs"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-big-array = "0.5.1"
shared_memory = "0.12.4"

[[bench]]
name = "ring_buffer_bench"
harness = false

[[bench]]
name = "stress_test"
harness = false
