[package]
name = "shared_structures"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { workspace = true , optional = true }
log = { workspace = true }
nix = { version = "0.30.1", features = ["event", "fs", "poll", "socket", "uio"], optional = true }
serde = { workspace = true }
bincode = { workspace = true }
serde-big-array = "0.5.1"
shared_memory = "0.12.4"
criterion.workspace = true

[features]
# 定义公共特性，用于启用后端
# 启用某个特性会自动拉取其 "dep:" 依赖
futex = ["dep:libc"]
semaphore = ["dep:libc"]
eventfd = ["dep:nix"]

# `default` 可以选择一个或多个默认启用的后端。
# 如果用户不指定，这些后端将被编译。
# default = ["eventfd"]
default = ["futex", "semaphore", "eventfd"]

use-eventfd = []
use-futex = []
use-semaphore = []

[[bench]]
name = "ring_buffer_bench"
harness = false

[[bench]]
name = "stress_test"
harness = false
