[package]
name = "tao_pixels_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
cairo-rs = "0.21.2"
libc.workspace = true
log.workspace = true
xbar_core = { workspace = true }
shared_structures = { workspace = true }
pango = "0.21.3"
pixels = "0.15.0"
raw-window-handle = "0.6.2"
tao = "0.34.3"
