[package]
name = "tao_softbuffer_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
libc.workspace = true
xbar_core = { workspace = true }
shared_structures = { workspace = true }
softbuffer = "0.4.6"
pango = "0.21.2"
cairo-rs = "0.21.2"
log.workspace = true
anyhow.workspace = true
tao = "0.34.3"
bytemuck = "1.23.2"
