[package]
name = "tgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coredump = "0.1.2"
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
futures-timer = "3.0.2"
substring = "1.4.5"
tokio = { version = "1.27.0", features = ["full"] }
