[package]
name = "x11rb_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13.2", features = ["all-extensions", "allow-unsafe-code", "dl-libxcb", "extra-traits"] }

anyhow = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
xbar_core = { workspace = true }
shared_structures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
toml = { workspace = true }

cairo-rs = { version = "0.21.2", features = ["xcb"] }
pango = "0.21.2"
pangocairo = "0.21.2"
xcb = "1.6.0"

