[package]
name = "xbar_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }

shared_structures = { workspace = true }
serde = { workspace = true }

alsa = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
battery = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
libc = { workspace = true }

cairo-rs = { version = "0.21.2", features = ["xcb"] }
pango = "0.21.2"
pangocairo = "0.21.2"

