[package]
name = "xcb_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"

xbar_core = { path = "../xbar_core" }
shared_structures = { workspace = true }
log = "0.4.28"
thiserror = "2.0.16"
toml = "0.9.6"
cairo-rs = { version = "0.21.2", features = ["xcb"] }
pango = "0.21.2"
pangocairo = "0.21.2"
xcb = "1.6.0"
libc = "0.2.175"

