[package]
name = "tauri_bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.27"
flexi_logger = "0.31.2"
chrono = "0.4.41"
thiserror = "2.0.12"
sysinfo = "0.36.0"
battery = "0.7.8"
shared_memory = "0.12.4"
bincode = "2.0.1"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.1"

shared_structures = { path = "../../shared_structures", features = ["use-eventfd"] }
# shared_structures = { path = "../../shared_structures", features = ["use-semaphore"] }
# shared_structures = { path = "../shared_structures", features = ["use-futex"] }
