[package]
name = "tauri_vue_bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_vue_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"

bincode = "2.0.1"
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
shared_structures = { path = "../../shared_structures", features = ["use-futex"] }
xbar_core = { path = "../../xbar_core" }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
